fix: small fixes on mobile

--- a/assets/styles/components/_ExtraFaq.scss
+++ b/assets/styles/components/_ExtraFaq.scss
@@ -70,6 +70,7 @@
 
 		@media (max-width: $breakpoint-tablet) {
 			width: 100%;
+			padding: 0 1.5em;
 		}
 
 		h3 {
